# py-oceanfile

./: PKGBUILD  README.md  example.toml  pyproject.toml  setup.cfg
oceanfile/: accounts.py  atomic.py  errors.py  main.py  notify.py  oid.py  sessions.py  settings.py
oceanfile/handlers/: auth.py  base.py  dirs.py  info.py  repos.py  stubs.py  upload.py
