[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = "oceanfile"
version = "1.0"
description = "Simplified and lightweight alternative to Seafile server"
license = "GPL"

[tool.poetry.scripts]
oceanfile = 'oceanfile.main:main'

[tool.poetry.dependencies]
aiohttp
tomli

[tool.poetry.extras]
systemd = ["systemd"]
