[metadata]
name = oceanfile
description = Simplified and lightweight alternative to Seafile server
license = GPL

[options]
packages = oceanfile
install_requires =
    aiohttp
    tomli

[options.extras_require]
systemd =
    systemd

[options.entry_points]
console_scripts =
    oceanfile = oceanfile.main:main
